-Fixed Exercsie attribute thing

--- a/GymAPP/manage_exercises.html
+++ b/GymAPP/manage_exercises.html
@@ -35,16 +35,18 @@
             <div class="muscle-selection">
                 <div class="direct-muscles">
                     <h4>Primary Muscles</h4>
-                    <select id="direct-muscles" multiple size="6">
+                    <p class="helper-text">Click to select multiple muscles</p>
+                    <div id="direct-muscles" class="muscle-options">
                         <!-- Will be populated based on category -->
-                    </select>
+                    </div>
                 </div>
                 
                 <div class="indirect-muscles">
                     <h4>Secondary Muscles</h4>
-                    <select id="indirect-muscles" multiple size="6">
+                    <p class="helper-text">Click to select multiple muscles</p>
+                    <div id="indirect-muscles" class="muscle-options">
                         <!-- Will be populated based on category -->
-                    </select>
+                    </div>
                 </div>
             </div>
             
