--- a/GymAPP/index.html
+++ b/GymAPP/index.html
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Metadata -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gym Training Tracker</title>
     <meta name="description" content="Track your gym workouts with this weekly training planner">
     <meta name="theme-color" content="#333333">
-    <title>Gym Training Tracker</title>
+
     <!-- Preload critical assets -->
     <link rel="preload" href="styles.css" as="style">
-    <link rel="preload" href="script.js" as="script">
+    <link rel="preload" href="data.js" as="script">
+    <link rel="preload" href="ui.js" as="script">
+    <link rel="preload" href="main.js" as="script">
+
     <!-- Stylesheets -->
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" 
-          integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" 
+
+    <!-- Font Awesome for icons -->
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+          integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
           crossorigin="anonymous" referrerpolicy="no-referrer">
+
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
@@ -104,10 +114,11 @@
     </main>
 
     <!-- Exercise Modal -->
-    <div id="exercise-modal" class="modal" role="dialog" aria-labelledby="modal-title">
+    <div id="exercise-modal" class="modal" role="dialog" aria-labelledby="modal-title" aria-modal="true">
         <div class="modal-content">
             <h2 id="modal-title">Add Exercise</h2>
             <form id="exercise-form" novalidate>
+                <label for="exercise-category">Category:</label>
                 <select id="exercise-category" required>
                     <option value="">Select Category</option>
                     <option value="chest">Chest</option>
@@ -117,28 +128,27 @@
                     <option value="legs">Legs</option>
                     <option value="core">Core</option>
                 </select>
-                
+
+                <label for="exercise-select">Exercise:</label>
                 <select id="exercise-select" required>
                     <option value="">Select Exercise</option>
                 </select>
 
                 <div class="form-group">
-                    <input type="number" id="exercise-sets" min="1" max="20" required
-                           placeholder="Number of Sets">
+                    <label for="exercise-sets">Number of Sets:</label>
+                    <input type="number" id="exercise-sets" min="1" max="20" required placeholder="e.g., 3">
                     <span class="input-hint">1-20 sets</span>
                 </div>
 
                 <div class="form-group">
-                    <input type="text" id="exercise-rep-range" 
-                           pattern="\d{1,2}-\d{1,2}" required
-                           placeholder="Rep Range (e.g., 8-12)">
+                    <label for="exercise-rep-range">Rep Range:</label>
+                    <input type="text" id="exercise-rep-range" pattern="\d{1,2}-\d{1,2}" required placeholder="e.g., 8-12">
                     <span class="input-hint">Format: min-max (e.g., 8-12)</span>
                 </div>
 
                 <div class="form-group">
-                    <input type="text" id="exercise-rir-range"
-                           pattern="\d{1,2}-\d{1,2}" required
-                           placeholder="RIR Range (e.g., 1-2)">
+                    <label for="exercise-rir-range">RIR Range:</label>
+                    <input type="text" id="exercise-rir-range" pattern="\d{1,2}-\d{1,2}" required placeholder="e.g., 1-2">
                     <span class="input-hint">Format: min-max (e.g., 1-2)</span>
                 </div>
 
@@ -159,10 +169,9 @@
         </div>
     </div>
 
-    <button id="close-modal" class="close-modal" type="button">&times;</button>
-    <button id="close-details-modal" class="close-modal" type="button">&times;</button>
-
-    <!-- Include script.js -->
-    <script src="script.js" defer></script>
+    <!-- Scripts -->
+    <script type="module" src="data.js"></script>
+    <script type="module" src="ui.js"></script>
+    <script type="module" src="main.js"></script>
 </body>
 </html>
