Fixed again by claude added workout creator

--- a/GymAPP/manage_exercises.html
+++ b/GymAPP/manage_exercises.html
@@ -32,8 +32,11 @@
     <header>
         <h1>Manage Exercises</h1>
         <nav>
-            <a href="index.html" class="nav-link">
-                <i class="fas fa-home"></i> Back to Workout Planner
+            <a href="training_log.html" class="nav-link">
+                <i class="fas fa-home"></i> Back to Training Log
+            </a>
+            <a href="workout_planner.html" class="nav-link">
+                <i class="fas fa-clipboard-list"></i> Workout Planner
             </a>
         </nav>
     </header>
